@@ -2,8 +2,11 @@
 PPL6 - HISTORY
 
 Version 6.4.19
-  - CBinary hat Malloc- und Calloc-Funktion bekommen
-
+  - CBinary hat Malloc- und Calloc-Funktion bekommen,
+    Save wurde umbenannt in Savef, Load in Loadf. Neue Save- und Load-
+    funktionen, die "const CString &" als einzigen Parameter erwarten 
+  - CID3Tag kann ID3-Tags aus AIFF-Dateien lesen
+  
 Version 6.4.18 vom 04.02.2014	(SVN-Tag: REL_6_4_18)
   - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
   - CID3Tag unterstützt TXXX-Tag mit EnergyLevel
